--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "antd": "^5.19.3",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
+    "concurrently": "^8.2.2",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "json-server": "^1.0.0-beta.0",
+    "moment": "^2.30.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
@@ -21,9 +24,7 @@
     "sass": "^1.77.8",
     "stream-browserify": "^3.0.0",
     "vm-browserify": "^1.1.2",
-    "web-vitals": "^2.1.4",
-    "concurrently": "^8.2.2",
-    "json-server": "^1.0.0-beta.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \" json-server --watch ./JsonServer/db.json --port 5000 \" "
